fix(singular): added genre wrap

--- a/src/pages/SingularFilme/SingularFilme.scss
+++ b/src/pages/SingularFilme/SingularFilme.scss
@@ -77,6 +77,7 @@
         justify-content: flex-start;
 
         gap: .3rem;
+        flex-wrap: wrap;
 
         .genre-tag {
           font-size: 1rem;
